[gd_scene load_steps=28 format=2]

[ext_resource path="res://scenes/UI/Pause_Screen.gd" type="Script" id=1]
[ext_resource path="res://images/UI/In-game menus/Pause menu/Intro/pause menu exporter_00009.png" type="Texture" id=2]
[ext_resource path="res://images/UI/In-game menus/Pause menu buttons/Save game/Unhover/Save Game Comp 1_00021.png" type="Texture" id=3]
[ext_resource path="res://images/UI/In-game menus/Pause menu buttons/Main menu/Unhover/Main Menu Comp 1_00023.png" type="Texture" id=4]
[ext_resource path="res://images/UI/In-game menus/Pause menu buttons/Main menu/Unhover/Main Menu Comp 1_00025.png" type="Texture" id=5]
[ext_resource path="res://images/UI/In-game menus/Pause menu buttons/Main menu/Unhover/Main Menu Comp 1_00021.png" type="Texture" id=6]
[ext_resource path="res://scenes/UI/pause_background.gd" type="Script" id=7]
[ext_resource path="res://images/UI/In-game menus/Pause menu buttons/Save game/Unhover/Save Game Comp 1_00023.png" type="Texture" id=8]
[ext_resource path="res://images/UI/In-game menus/Pause menu buttons/Save game/Unhover/Save Game Comp 1_00025.png" type="Texture" id=9]
[ext_resource path="res://images/UI/In-game menus/Pause menu buttons/Load game/Unhover/Load Game Comp 1_00025.png" type="Texture" id=10]
[ext_resource path="res://images/UI/In-game menus/Pause menu buttons/Load game/Unhover/Load Game Comp 1_00021.png" type="Texture" id=11]
[ext_resource path="res://images/UI/In-game menus/Pause menu buttons/Load game/Unhover/Load Game Comp 1_00023.png" type="Texture" id=12]
[ext_resource path="res://images/UI/In-game menus/Pause menu buttons/Quit/Unhover/Quit Comp 1_00021.png" type="Texture" id=13]
[ext_resource path="res://images/UI/In-game menus/Pause menu buttons/Quit/Unhover/Quit Comp 1_00025.png" type="Texture" id=14]
[ext_resource path="res://images/UI/In-game menus/Pause menu buttons/Quit/Unhover/Quit Comp 1_00023.png" type="Texture" id=15]
[ext_resource path="res://images/UI/In-game menus/Quit menu/testArtboard 12quitdesknobutt.png" type="Texture" id=16]
[ext_resource path="res://images/UI/In-game menus/Quit menu/testArtboard 11quityesclick.png" type="Texture" id=17]
[ext_resource path="res://images/UI/In-game menus/Quit menu/testArtboard 11quitno.png" type="Texture" id=18]
[ext_resource path="res://images/UI/In-game menus/Quit menu/testArtboard 11quityes.png" type="Texture" id=19]
[ext_resource path="res://images/UI/In-game menus/Quit menu/testArtboard 12quitmainmenunobutt.png" type="Texture" id=20]
[ext_resource path="res://images/UI/In-game menus/Quit menu/testArtboard 11quitnoclick.png" type="Texture" id=21]
[ext_resource path="res://images/UI/In-game menus/Pause menu buttons/Settings/Unhover/Layer 14-pause menu exporter2.ai Comp 1_00027.png" type="Texture" id=22]
[ext_resource path="res://images/UI/In-game menus/Pause menu buttons/Settings/Unhover/Layer 14-pause menu exporter2.ai Comp 1_00029.png" type="Texture" id=23]
[ext_resource path="res://images/UI/In-game menus/Pause menu buttons/Settings/Unhover/Layer 14-pause menu exporter2.ai Comp 1_00031.png" type="Texture" id=24]
[ext_resource path="res://fonts/Nametag/RobotoSlab/RobotoSlab-SemiBold.ttf" type="DynamicFontData" id=25]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.792157 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 25 )

[node name="pause_screen" type="Control"]
pause_mode = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause_Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.901961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 1450, 6.021 )
texture = ExtResource( 2 )
centered = false
script = ExtResource( 7 )

[node name="buttons" type="Control" parent="."]
margin_left = 50.0
margin_right = 90.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="TextureButton" parent="buttons"]
margin_left = 1483.2
margin_top = 363.662
margin_right = 1818.2
margin_bottom = 454.662
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="TextureButton" parent="buttons"]
margin_left = 1485.1
margin_top = 454.911
margin_right = 1821.1
margin_bottom = 545.911
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="TextureButton" parent="buttons"]
margin_left = 1479.05
margin_top = 550.071
margin_right = 2079.05
margin_bottom = 650.071
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fade_out" type="Panel" parent="buttons/MainMenu"]
visible = false
margin_left = -1806.0
margin_top = -901.0
margin_right = 788.0
margin_bottom = 980.0
custom_styles/panel = SubResource( 1 )

[node name="menu_popup" type="Sprite" parent="buttons/MainMenu"]
visible = false
position = Vector2( -745, 0 )
texture = ExtResource( 20 )

[node name="yes" type="TextureButton" parent="buttons/MainMenu"]
visible = false
margin_left = -925.89
margin_top = -15.816
margin_right = -824.89
margin_bottom = 65.184
texture_normal = ExtResource( 19 )
texture_hover = ExtResource( 17 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no" type="TextureButton" parent="buttons/MainMenu"]
visible = false
margin_left = -726.68
margin_top = -16.3815
margin_right = -625.68
margin_bottom = 64.6185
texture_normal = ExtResource( 18 )
texture_hover = ExtResource( 21 )
expand = true
stretch_mode = 4

[node name="Settings" type="TextureButton" parent="buttons"]
margin_left = 1477.46
margin_top = 647.122
margin_right = 1828.46
margin_bottom = 738.122
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 23 )
texture_hover = ExtResource( 22 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="buttons"]
margin_left = 1558.04
margin_top = 746.882
margin_right = 1725.04
margin_bottom = 838.882
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fade_out" type="Panel" parent="buttons/Quit"]
visible = false
margin_left = -1920.0
margin_top = -1163.0
margin_right = 688.0
margin_bottom = 739.0
custom_styles/panel = SubResource( 1 )

[node name="desktop_popup" type="Sprite" parent="buttons/Quit"]
visible = false
position = Vector2( -824.05, -107.668 )
texture = ExtResource( 16 )

[node name="yes" type="TextureButton" parent="buttons/Quit"]
visible = false
margin_left = -1004.94
margin_top = -123.484
margin_right = -903.94
margin_bottom = -42.4845
texture_normal = ExtResource( 19 )
texture_hover = ExtResource( 17 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no" type="TextureButton" parent="buttons/Quit"]
visible = false
margin_left = -805.73
margin_top = -124.05
margin_right = -704.73
margin_bottom = -43.0499
texture_normal = ExtResource( 18 )
texture_hover = ExtResource( 21 )
expand = true
stretch_mode = 4

[node name="scene_name" type="Label" parent="."]
margin_left = 286.0
margin_top = 1027.0
margin_right = 1251.0
margin_bottom = 1069.0
custom_fonts/font = SubResource( 2 )
text = "SCENE NAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="buttons/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="buttons/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="buttons/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="buttons/MainMenu/yes" to="." method="_on_MainMenu_Confirmation_confirmed"]
[connection signal="pressed" from="buttons/MainMenu/no" to="." method="_on_mainmenu_closed"]
[connection signal="pressed" from="buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="buttons/Quit/yes" to="." method="_on_Quit_Confirmation_confirmed"]
[connection signal="pressed" from="buttons/Quit/no" to="." method="_on_quit_closed"]
